--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -37,9 +37,11 @@ jobs:
     - name: Allure Report action from marketplace
       uses: simple-elf/allure-report-action@master
       if: always()
-        #id: allure-report
+      id: allure-report
       with:
         allure_results: allure-results
+        gh_pages: gh-pages
+        allure_report: allure-report
         allure_history: allure-history
         keep_reports: 20
         
@@ -47,7 +49,7 @@ jobs:
       if: always()
       uses: peaceiris/actions-gh-pages@v2
       env:
-        PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        PERSONAL_TOKEN: ${{ secrets.GH_TOKEN }}
         PUBLISH_BRANCH: gh-pages
         PUBLISH_DIR: allure-history
     
